<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.csusb.cse455.trip.ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:src="@drawable/bg_opacity_gradient"/>

    <!-- Transparent layer -->
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:orientation="vertical">

    <!-- Login username block -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content" />


        <!-- Logo Block -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:src="@drawable/trip_logo"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">

            <!-- USERNAME INPUT -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/logEmail"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/username_icon"
                    android:layout_toEndOf="@+id/username_icon"
                    android:layout_alignBottom="@+id/username_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/fullTransparent"
                    android:hint="Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="12dp"
                    android:paddingStart="12dp"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="8dp"
                    android:layout_marginBottom="-8dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/textSize"
                    android:theme="@style/EditTextTheme"/>

                <!-- ICON -->
                <ImageView
                    android:id="@+id/username_icon"
                    android:padding="3dp"
                    android:src="@drawable/email"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"/>

            </RelativeLayout>

            <!-- Line 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/divider"
                android:layout_marginLeft="55dp">

            </LinearLayout>

            <!-- USERNAME INPUT -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/logPassword"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/password_icon"
                    android:layout_alignBottom="@+id/password_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"
                    android:textColor="@android:color/white"
                    android:background="@color/fullTransparent"
                    android:paddingLeft="12dp"
                    android:paddingStart="12dp"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="8dp"
                    android:layout_marginBottom="-8dp"
                    android:textSize="@dimen/textSize"
                    android:theme="@style/EditTextTheme"/>

                <!-- ICON -->
                <ImageView
                    android:id="@+id/password_icon"
                    android:padding="3dp"
                    android:src="@drawable/password"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"/>

            </RelativeLayout>


            <!-- Line 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:background="@color/divider"
                android:layout_marginLeft="55dp">

            </LinearLayout>

            <TextView
                android:id="@+id/logResetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:padding="12dp"
                android:textColor="@color/dullWhite"
                android:layout_gravity="right"
                android:gravity="right"
                android:layout_marginBottom="32dp"/>

            <Button
                android:id="@+id/logBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:background="@drawable/button"
                android:textAllCaps="false"
                android:text="Sign In"
                android:textSize="@dimen/textButton"
                android:textColor="@color/colorButtonText"
                android:padding="20dp"
                android:layout_gravity="center"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="25dp"
                android:layout_gravity="center"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account ?"
                    android:textColor="@color/dullWhite"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/logRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  Register"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
