...
                android:paddingStart="5dp"
                android:paddingRight="5dp"
                android:paddingEnd="5dp">

                <!-- INPUT -->
                <EditText
                    android:id="@+id/regPassword"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/password_icon"
                    android:layout_toEndOf="@+id/password_icon"
                    android:layout_alignBottom="@+id/password_icon"
                    android:layout_width="match_parent"
...
